show payment installments and fix form style on mobile

--- a/src/components/Forms/DatePickerInput.module.css
+++ b/src/components/Forms/DatePickerInput.module.css
@@ -1,5 +1,6 @@
 .datePicker {
-  display: inline-flex;
+  display: flex;
+  justify-content: flex-end;
   align-items: center;
 }
 
