--- a/src/components/Forms/Input.module.css
+++ b/src/components/Forms/Input.module.css
@@ -12,7 +12,7 @@
   border-radius: 5px;
   background: var(--lightPink);
   transition: 0.2s;
-  width: 200px;
+  width: 180px;
   height: 32px;
 }
 
