--- a/src/components/Forms/Select.module.css
+++ b/src/components/Forms/Select.module.css
@@ -13,7 +13,7 @@
   border-radius: 5px;
   background: var(--lightPink);
   transition: 0.2s;
-  width: 200px;
+  width: 180px;
   cursor: pointer;
 }
 
