--- a/src/index.css
+++ b/src/index.css
@@ -150,7 +150,7 @@ h2 {
   border-radius: 5px !important;
   background: var(--lightPink) !important;
   transition: 0.2s;
-  width: 200px !important;
+  width: 180px !important;
 }
 
 .react-datepicker__day-name {
