--- a/src/pages/Order/Order.module.css
+++ b/src/pages/Order/Order.module.css
@@ -37,6 +37,7 @@
 .form {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   height: 100%;
   gap: 25px;
 }
@@ -55,5 +56,10 @@
 @media (max-width: 42rem) {
   .order {
     flex-direction: column;
+    justify-content: center;
+  }
+  .form, .payment {
+    justify-content: flex-end;
+    width: 280px;
   }
 }
